# transit-data-analytics-demo

./: .containerignore  .flake8  .gitignore  .pre-commit-config.yaml  .sqlfluff  .tool-versions  Containerfile  Dockerfile  README.md  docker-compose.yaml  feeds.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/docs/: hologit.md
.github/: pull_request_template.md
.github/workflows/: build-dags.yml  build-fetcher-image.yml  build-fetcher.yml  build-k8s-manifests.yml  build-warehouse-image.yml  build-warehouse.yml  execute-warehouse-image.yml  lint.yml  release-candidate-branch.yml  release-deploy.yml
.holo/: config.toml
.holo/branches/k8s-manifests/: _cluster-template.toml  _core-manifests.toml  _tdad.toml
.holo/branches/k8s-manifests.lenses/: dagster.toml  fetcher-prod.toml  fetcher-test.toml  k8s-normalize.toml  metabase.toml
.holo/branches/release-candidate/: _cluster-template.toml  _transit-data-analytics-demo.toml
.holo/lenses/: fetcher-prod.toml  fetcher-test.toml
.holo/sources/: cluster-template.toml  dagster.toml  metabase.toml  pmint93-helm-charts.toml
_/ClusterIssuer/: letsencrypt-prod.yaml  letsencrypt-staging.yaml
_/ClusterRole/: github-actions.yaml
_/ClusterRoleBinding/: github-actions-cluster-admin-binding.yaml
_/Namespace/: dagster.yaml  fetcher-test.yaml  fetcher.yaml
archiver/: consumer.py  metrics.py  tasks.py  ticker.py
ci/: prod.yaml  pyproject.toml  tasks.py  test.yaml
dags/: .gitignore  Dockerfile  README.md  pyproject.toml
dags/dags/: __init__.py  assets.py  common.py
dagster/ConfigMap/: dagster-daemon-env.yaml  dagster-dagster-user-deployments-tdad-dags-user-env.yaml  dagster-dagster-user-deployments-user-deployments-shared-env.yaml  dagster-flower-env.yaml  dagster-instance.yaml  dagster-pipeline-env.yaml  dagster-webserver-env.yaml  dagster-workspace-yaml.yaml
dagster/Deployment/: dagster-daemon.yaml  dagster-dagster-user-deployments-tdad-dags.yaml  dagster-dagster-webserver.yaml
dagster/Ingress/: dagster-ingress.yaml
dagster/Role/: dagster-dagster-user-deployments-role.yaml  dagster-role.yaml
dagster/RoleBinding/: dagster-dagster-user-deployments-rolebinding.yaml  dagster-rolebinding.yaml
dagster/Secret/: dagster-postgresql-secret.yaml  dagster-postgresql.yaml
dagster/Service/: dagster-dagster-webserver.yaml  dagster-postgresql-headless.yaml  dagster-postgresql.yaml  tdad-dags.yaml
dagster/ServiceAccount/: dagster-dagster-user-deployments-user-deployments.yaml  dagster.yaml
dagster/StatefulSet/: dagster-postgresql.yaml
evidence/: README.md  degit.json  evidence.config.yaml  package.json
evidence/.evidence/customization/: .profile.json  custom-formatting.json
evidence/pages/: index.md  tdad.md
evidence/sources/tdad/: connection.yaml  vehicle_positions_by_day.sql
fetcher/: Dockerfile  common.py  consumer.py  docker-compose.yaml  feed_types.py  feeds.yaml  parse.py  pyproject.toml  tasks.py  ticker.py
fetcher-test/ConfigMap/: fetcher-config.yaml
fetcher-test/Deployment/: consumer.yaml  redis.yaml  ticker.yaml
fetcher-test/Service/: redis.yaml
fetcher/ConfigMap/: fetcher-config.yaml
fetcher/Deployment/: consumer.yaml  redis.yaml  ticker.yaml
fetcher/Service/: redis.yaml
fetcher/fetcher/: common.py  consumer.py  parse.py  tasks.py  ticker.py
fetcher/tests/: test_tasks.py
kube-system/Secret/: github-actions-secret.yaml
kube-system/ServiceAccount/: github-actions.yaml
kubernetes/charts/grafana/: default-values.yaml  release-values.yaml
kubernetes/charts/ingress-nginx/: default-values.yaml  release-values.yaml
kubernetes/charts/loki/: default-values.yaml  release-values.yaml
kubernetes/charts/metabase/: values.yaml
kubernetes/charts/prometheus/: default-values.yaml  release-values.yaml
kubernetes/charts/promtail/: default-values.yaml  release-values.yaml
kubernetes/manifests/: cert-manager.issuers.yaml  dagster_runs_ns.yaml  github-actions.serviceaccount.yaml
kubernetes/manifests/fetcher/: consumer.yaml  kustomization.yaml  redis.yaml  ticker.yaml
kubernetes/overlays/fetcher-prod/: config.yaml  consumer.patch.yaml  kustomization.yaml  ns.yaml  ticker.patch.yaml
kubernetes/overlays/fetcher-test/: config.yaml  consumer.patch.yaml  kustomization.yaml  ns.yaml
kubernetes/values/: prod-dagster.yml  prod-grafana.yml  prod-metabase.yml  prod-prometheus.yml
metabase/ConfigMap/: database-config.yaml  metabase-config.yaml
metabase/CronJob/: database-backup.yaml
metabase/Deployment/: metabase.yaml
metabase/Ingress/: metabase.yaml
metabase/StatefulSet/: database.yaml
metadata/: METADATA-TABLES.md  create-metadata-tables.sql
scripts/: analyze-all-bucket-coverage  analyze-bucket-coverage.py  list-all-gcs-files  list-all-gcs-parsed-files  list-gcs-files  list-gcs-parsed-files  prune-runs
tests/: test_tasks.py
warehouse/: .dockerignore  Dockerfile  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
warehouse/macros/: get_custom_schema.sql  get_string_value_at_json_path.sql  gtfs_time_to_seconds.sql  metric_stop_performance_window_over.sql  parse_filename.sql  parsed_file_common_element_lookups.sql
warehouse/models/example/: schema.yml
warehouse/models/mart/: _mart.yml  demo_segment_performance.sql  demo_stop_performance.sql  dim_schedule_feeds.sql  dim_shapes.sql  dim_stops.sql  fct_observed_segment_geographies.sql  fct_observed_segments.sql  fct_observed_shape_times.sql  fct_observed_stop_times.sql  fct_scheduled_stops.sql  fct_scheduled_trips.sql  fct_vehicle_positions.sql  metric_segment_performance.sql  metric_stop_performance_all_shapes.sql  metric_stop_shape_performance.sql
warehouse/models/staging/: _sources.yml  _staging.yml  stg_gtfs_rt__trip_updates.sql  stg_gtfs_rt__vehicle_positions.sql  stg_routes.sql  stg_shapes.sql  stg_stop_times.sql  stg_stops.sql  stg_trips.sql
warehouse/models/staging/rt/: _staging_rt.yml  stg_gtfs_rt__trip_updates.sql
warehouse/models/staging/schedule/: _staging_schedule.yml  stg_gtfs_schedule__calendar.sql
warehouse/seeds/: feed_map.csv
(+17 files in other folders)
